Added a light and dark theme mode

--- a/src/util/App.css
+++ b/src/util/App.css
@@ -8,5 +8,20 @@
 }
 
 .carousel {
-  margin-top: 30%;
+  height: 100vh;
+}
+
+.dark {
+  background-color: black;
+  color: white;
+}
+
+.light {
+  background-color: white;
+  color: black;
+}
+
+.themeButton {
+  display: flex;
+  justify-content: center;
 }
